[gd_scene load_steps=19 format=3 uid="uid://v2f5yakwh2uv"]

[ext_resource type="Script" path="res://scenes/world/world_init.gd" id="1_hxmwk"]
[ext_resource type="Texture2D" uid="uid://cymnhl47hj6bo" path="res://assets/sprites/world/world.png" id="1_x7suc"]
[ext_resource type="PackedScene" uid="uid://sndhm53bfar" path="res://scenes/Player/player.tscn" id="2_5jprm"]
[ext_resource type="Texture2D" uid="uid://blk2vsyowvb0" path="res://assets/sprites/transition/transition_cloud_anim.png" id="4_l7rt6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g2kaq"]
texture = ExtResource("1_x7suc")
6:4/size_in_atlas = Vector2i(2, 2)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
8:0/size_in_atlas = Vector2i(2, 2)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
4:2/size_in_atlas = Vector2i(2, 2)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:4/size_in_atlas = Vector2i(2, 2)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
2:4/size_in_atlas = Vector2i(2, 2)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:2/size_in_atlas = Vector2i(2, 2)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:4/size_in_atlas = Vector2i(2, 2)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
8:6/size_in_atlas = Vector2i(2, 2)
8:6/0 = 0
8:6/0/y_sort_origin = 11
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
6:6/size_in_atlas = Vector2i(2, 2)
6:6/0 = 0
6:6/0/y_sort_origin = 10
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
4:6/size_in_atlas = Vector2i(2, 2)
4:6/0 = 0
4:6/0/y_sort_origin = 8
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
2:6/size_in_atlas = Vector2i(2, 2)
2:6/0 = 0
2:6/0/texture_origin = Vector2i(1, 2)
2:6/0/y_sort_origin = 2
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
0:6/size_in_atlas = Vector2i(2, 2)
0:6/0 = 0
0:6/0/y_sort_origin = 9
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
8:2/size_in_atlas = Vector2i(2, 2)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:4/size_in_atlas = Vector2i(2, 2)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.0867, -15.7331, 18.208, -15.7331, 18.5616, 15.7331, -16.0867, 16.0867)
10:0/size_in_atlas = Vector2i(2, 2)
10:0/0 = 0
10:0/0/y_sort_origin = 5
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
12:0/size_in_atlas = Vector2i(2, 2)
12:0/0 = 0
12:0/0/y_sort_origin = 5
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
12:2/size_in_atlas = Vector2i(2, 4)
12:2/0 = 0
12:2/0/y_sort_origin = 20
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
10:2/size_in_atlas = Vector2i(2, 2)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:4/size_in_atlas = Vector2i(2, 2)
10:4/0 = 0
10:4/0/y_sort_origin = 8
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
10:6/size_in_atlas = Vector2i(2, 2)
10:6/0 = 0
10:6/0/y_sort_origin = 4
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
12:6/size_in_atlas = Vector2i(2, 2)
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ikjjq"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_g2kaq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7gbo"]
size = Vector2(32, 31)

[sub_resource type="Animation" id="Animation_xyt3u"]
resource_name = "bye"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_qmkkn"]
resource_name = "hi"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bl3a"]
_data = {
"bye": SubResource("Animation_xyt3u"),
"hi": SubResource("Animation_qmkkn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_pl82l"]
atlas = ExtResource("4_l7rt6")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vah2b"]
atlas = ExtResource("4_l7rt6")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x12r8"]
atlas = ExtResource("4_l7rt6")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj08i"]
atlas = ExtResource("4_l7rt6")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd2wc"]
atlas = ExtResource("4_l7rt6")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j38bn"]
atlas = ExtResource("4_l7rt6")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hl1s"]
atlas = ExtResource("4_l7rt6")
region = Rect2(0, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_omf0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl82l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vah2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x12r8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj08i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd2wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j38bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hl1s")
}],
"loop": false,
"name": &"hi",
"speed": 12.0
}]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hxmwk")

[node name="Player" parent="." instance=ExtResource("2_5jprm")]
position = Vector2(113, 138)
scale = Vector2(0.8, 0.8)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.4, 1.4)
limit_left = 29
limit_top = -23
limit_right = 317
limit_bottom = 200

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(-11, -32)
tile_set = SubResource("TileSet_ikjjq")
rendering_quadrant_size = 32
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(720907, 262144, 4, 589835, 262144, 4, 458763, 262144, 4, 327691, 262144, 4, 196619, 262144, 4, 65547, 262144, 4, 65549, 393216, 4, 65551, 393216, 4, 196621, 393216, 4, 196623, 393216, 4, 65553, 393216, 4, 196625, 393216, 4, 65555, 393216, 4, 196627, 393216, 4, 65545, 393216, 4, 65543, 393216, 4, 65541, 393216, 4, 65539, 393216, 4, 196611, 393216, 4, 196613, 393216, 4, 196615, 393216, 4, 196617, 393216, 4, 327693, 393216, 4, 327695, 393216, 4, 327697, 393216, 4, 327699, 393216, 4, 458771, 393216, 4, 458769, 393216, 4, 458767, 393216, 4, 458765, 393216, 4, 589837, 393216, 4, 589839, 393216, 4, 589841, 393216, 4, 589843, 393216, 4, 720915, 393216, 4, 720913, 393216, 4, 720911, 393216, 4, 720909, 393216, 4, 720905, 393216, 4, 720903, 393216, 4, 720901, 393216, 4, 720899, 393216, 4, 589827, 393216, 4, 458755, 393216, 4, 327683, 393216, 4, 327685, 393216, 4, 327687, 393216, 4, 327689, 393216, 4, 458761, 393216, 4, 458759, 393216, 4, 458757, 393216, 4, 589829, 393216, 4, 589831, 393216, 4, 589833, 393216, 4, 851971, 393216, 4, 851973, 393216, 4, 851975, 393216, 4, 851977, 393216, 4, 851981, 393216, 4, 851987, 393216, 4, 851985, 393216, 4, 851983, 393216, 4, 851979, 262144, 4, 65537, 524288, 4, 196609, 524288, 4, 327681, 524288, 4, 458753, 524288, 4, 589825, 524288, 4, 720897, 524288, 4, 851969, 524288, 4, 983041, 524288, 4, 983043, 524288, 4, 983045, 524288, 4, 983047, 524288, 4, 983049, 524288, 4, 983051, 524288, 4, 983053, 524288, 4, 983055, 524288, 4, 983057, 524288, 4, 983059, 524288, 4, 983061, 524288, 4, 851989, 524288, 4, 720917, 524288, 4, 589845, 524288, 4, 458773, 524288, 4, 327701, 524288, 4, 196629, 524288, 4, 65557, 524288, 4, -65515, 524288, 4, -65517, 524288, 4, -65519, 524288, 4, -65521, 524288, 4, -65523, 524288, 4, -131061, 524288, 4, -65527, 524288, 4, -65529, 524288, 4, -65531, 524288, 4, -65533, 524288, 4, -65535, 524288, 4)
layer_1/name = "bush"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(851972, 786432, 0, 655368, 655360, 0, 458755, 786432, 0, 327688, 786432, 0, 196613, 655360, 0, 131082, 655360, 0, 5, 655360, 0, 65550, 655360, 0, 65553, 655360, 0, 262163, 655360, 0, 458770, 786432, 0, 458769, 655360, 0, 589838, 655360, 0, 655378, 655360, 0, 851987, 655360, 0, 851982, 655360, 0, 458761, 655360, 6, 851984, 655360, 6, 327697, 655360, 6, 65555, 655360, 6, 327683, 655360, 6, 786435, 655360, 6, 851977, 655360, 6)
layer_2/name = "trees"
layer_2/y_sort_enabled = true
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(327693, 786432, 2, 196617, 786432, 2, 458764, 786432, 2, 327689, 786432, 2, 524296, 786432, 2, 262150, 786432, 2, 65540, 786432, 2, 65539, 786432, 2, 65542, 786432, 2, 131079, 786432, 2, 65545, 786432, 2, 196612, 786432, 2, 393220, 786432, 2, 458758, 786432, 2, 589828, 786432, 2, 655363, 786432, 2, 786437, 786432, 2, 589830, 786432, 2, 720904, 786432, 2, 786442, 786432, 2, 851975, 786432, 2, 851980, 786432, 2, 655373, 786432, 2, 589833, 786432, 2, 458766, 786432, 2, 196623, 786432, 2, 196620, 786432, 2, 65549, 786432, 2, 65550, 786432, 2, 131089, 786432, 2, 327697, 786432, 2, 393232, 786432, 2, 589840, 786432, 2, 720911, 786432, 2, 786449, 786432, 2, 851987, 786432, 2, 655378, 786432, 2, 524307, 786432, 2, 327699, 786432, 2, 131092, 786432, 2, 18, 786432, 2)
layer_3/name = "rocks"
layer_3/y_sort_enabled = true
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(327687, 131072, 6, 262158, 131072, 6, 196627, 131072, 6, 327695, 262144, 6, 196626, 262144, 6, 65552, 262144, 6, 15, 262144, 6, 131091, 262144, 6, 655379, 262144, 6, 851983, 262144, 6, 655372, 262144, 6, 458762, 262144, 6, 720901, 262144, 6, 720902, 262144, 6, 851971, 262144, 6, 393218, 262144, 6, 262152, 262144, 6, 196611, 262144, 6, 8, 262144, 6, 327685, 393216, 6, 393223, 393216, 6, 393226, 393216, 6, 262154, 393216, 6, 65546, 393216, 6, 12, 393216, 6, 524303, 393216, 6, 786446, 393216, 6, 524305, 393216, 6, 19, 393216, 6, 2, 393216, 6, 524290, 393216, 6, 786434, 393216, 6, 851977, 393216, 6, 589834, 0, 6, 524300, 0, 6, 589836, 0, 6, 262156, 0, 6, 65555, 0, 6, 16, 0, 6, 458769, 0, 6, 589844, 0, 6, 851984, 0, 6, 720909, 0, 6, 786445, 0, 6, 655367, 0, 6, 720900, 0, 6, 458757, 0, 6, 458754, 0, 6, 327683, 0, 6, 262149, 0, 6, 196616, 0, 6, 196618, 0, 6, 10, 0, 6, 196610, 0, 6, 262147, 0, 6)

[node name="init" type="Marker2D" parent="."]
position = Vector2(173, 188)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(173, -27.5)
shape = SubResource("RectangleShape2D_x7gbo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
layout_direction = 1
offset_left = -521.0
offset_top = -111.0
offset_right = 577.0
offset_bottom = 542.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_3bl3a")
}

[node name="clouds" type="AnimatedSprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(173, 97)
scale = Vector2(4, 3.778)
sprite_frames = SubResource("SpriteFrames_omf0a")
animation = &"hi"

[node name="up" type="Marker2D" parent="."]
position = Vector2(173, -12)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="CanvasLayer/ColorRect/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/clouds" to="." method="_on_clouds_animation_finished"]
